@@ -7,6 +7,9 @@
 [yi-around-ad_1.0.0.1 2018-08-20 PeterZhang]
 1.新功能:增加附近美食店铺功能
 
+[yi-around-ad_1.0.0.1 2018-08-24 PeterZhang]
+1.新功能:增加直播功能
+
 --备注分类
 1、新功能：
 2、Bug:
